--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 
   <groupId>br.com.habitten</groupId>
   <artifactId>sistema-habitten</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
 
-  <name>sistema-habitten</name>
+  <name>Sistema Habitten</name>
   <description>Sistema para gerenciamento de vendas Habitten</description>
 
   <parent>
